--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
         <main>
             <section id="game-options">
                 <div id="game-color-options">
-                    <button type="button" class="game-btn">Black</button>
-                    <button type="button" class="game-btn">White</button>
-                    <button type="button" class="game-btn">Rainbow</button>
+                    <button type="button" class="game-btn" id="reset-game">Reset Game</button>
+                    <button type="button" class="game-btn" id="black-btn">Black</button>
+                    <button type="button" class="game-btn" id="gray-btn">Gray</button>
+                    <button type="button" class="game-btn" id="rainbow-btn">Rainbow</button>
                 </div>
                 <div id="game-grid-options">
                     <p id="game-grid-description">Grid Size: </p>
@@ -25,8 +26,8 @@
                 </div>
             </section>
             <section id="game-grid">
-                <p>Hello</p>
             </section>
         </main>
     </body>
+    <script src="js-files/gamelogic.js"></script>
 </html>
