Project Is Ready!
The final project is ready. Good learning experience
overall. I could add many more features but I won't
go overboard as this is a simple game. Im content
with how things turned out. Maybe in the future ill
expand on this project, who knows.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </div>
                 <div id="game-grid-options">
                     <p id="game-grid-description">Grid Size: </p>
-                    <input type="range" min="2" max="100" value="2" id="game-grid-slider">
+                    <input type="range" min="2" max="100" step="1" value="2" id="game-grid-slider">
                 </div>
             </section>
             <section id="game-grid">
